--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.2.5
-django-heroku==0.0.0
-gunicorn==20.1.0
-whitenoise==5.3.0
+asgiref==3.3.1
+Django==3.1.8
+pytz==2020.5
+sqlparse==0.4.1
