--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
+asgiref==3.4.1
 Django==3.2.5
-django-heroku==0.0.0
-gunicorn==20.1.0
-whitenoise==5.3.0
+pytz==2021.1
+sqlparse==0.4.1
+pillow==8.3.2
